--- a/whatsapp-clone/Base.lproj/Main.storyboard
+++ b/whatsapp-clone/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="rvK-xh-QOi">
-                                <rect key="frame" x="16" y="132" width="382" height="204"/>
+                                <rect key="frame" x="16" y="132" width="382" height="132.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c88-0R-dGn">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="24"/>
@@ -76,8 +76,8 @@
                                             <constraint firstAttribute="height" constant="2" id="f7T-UC-CTk"/>
                                         </constraints>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zq5-3I-2tf">
-                                        <rect key="frame" x="0.0" y="141.5" width="160" height="24"/>
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zq5-3I-2tf">
+                                        <rect key="frame" x="0.0" y="132.5" width="160" height="24"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="24" id="DK1-Fp-8Hd"/>
                                         </constraints>
@@ -85,16 +85,16 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uAE-8x-BwF">
-                                        <rect key="frame" x="0.0" y="174.5" width="117.5" height="18.5"/>
+                                    <textField hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uAE-8x-BwF">
+                                        <rect key="frame" x="0.0" y="132.5" width="117.5" height="18.5"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="18.5" id="Dae-h9-OXU"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5FT-MB-5a9">
-                                        <rect key="frame" x="0.0" y="202" width="382" height="2"/>
+                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5FT-MB-5a9">
+                                        <rect key="frame" x="0.0" y="132.5" width="382" height="2"/>
                                         <color key="backgroundColor" systemColor="systemGrayColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="2" id="SKi-PX-0Sf"/>
@@ -103,7 +103,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mdz-uZ-0B6">
-                                <rect key="frame" x="16" y="356" width="232" height="30"/>
+                                <rect key="frame" x="16" y="284.5" width="232" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="2Ab-of-1Vi"/>
                                 </constraints>
@@ -113,7 +113,7 @@
                                 </connections>
                             </button>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ufY-xm-LeP">
-                                <rect key="frame" x="278" y="356" width="120" height="30"/>
+                                <rect key="frame" x="278" y="284.5" width="120" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="aJ6-f6-EjB"/>
                                     <constraint firstAttribute="width" constant="120" id="d69-TW-9VA"/>
@@ -124,7 +124,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7GH-5a-Dyk">
-                                <rect key="frame" x="60" y="406" width="294" height="62"/>
+                                <rect key="frame" x="60" y="334.5" width="294" height="62"/>
                                 <state key="normal" image="loginBtn"/>
                                 <connections>
                                     <action selector="loginButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qf9-29-Kck"/>
